Implemented DI